test/hotCases/errors/events/l_valueC.js
import { valueA } from './l_exports';
export const valueC = valueA + 5;
---
import { valueA } from './l_exports';
export const valueC = valueA + 10;
